--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -38,6 +38,8 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     name: setup
+    with: 
+      
     steps:
       - name: Check if registry secrets are set
         run: |
@@ -61,7 +63,7 @@ jobs:
           echo "::set-output name=bin_dir::$(pwd)/bin"
 
           # Create Distribution Matrix
-          echo "::set-output name=dist_matrix::$(echo -n "${{ env.BUILD_PLATFORMS }}" | jq -csR '. | split(",")')"
+          echo "::set-output name=dist_matrix::$(echo -n "${{ github.event.inputs.BUILD_PLATFORMS }}" | jq -csR '. | split(",")')"
 
       - name: Setting Image Variables
         id: set-variables-image
@@ -138,7 +140,7 @@ jobs:
           mkdir -p ${{ steps.set-variables.outputs.bin_dir }}
 
           # Operator SDK
-          curl -L -o ${{ steps.set-variables.outputs.bin_dir }}/operator-sdk https://github.com/operator-framework/operator-sdk/releases/download/${OPERATOR_SDK_VERSION}/operator-sdk_linux_amd64
+          curl -L -o ${{ steps.set-variables.outputs.bin_dir }}/operator-sdk https://github.com/operator-framework/operator-sdk/releases/download/${{ github.event.inputs.OPERATOR_SDK_VERSION }}/operator-sdk_linux_amd64
 
           # Controller-gen
           make controller-gen
@@ -610,8 +612,8 @@ jobs:
         with:
           path: ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
           commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.BUNDLE_VERSION }}
-          committer: ${{ github.actor }} <${{ env.PR_ACTOR }}>
-          author: ${{ github.actor }} <${{ env.PR_ACTOR }}>
+          committer: ${{ github.actor }} <${{ github.event.inputs.PR_ACTOR }}>
+          author: ${{ github.actor }} <${{ github.event.inputs.PR_ACTOR }}>
           signoff: true
           branch: ${{ env.REPOSITORY_NAME }}-${{ env.BUNDLE_VERSION }}
           delete-branch: true
