--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -100,7 +100,7 @@ jobs:
           fi
           
           # Set Dockerfile Absolute Path (Buildx Absolute Path Fix)
-          echo "::set-output name=dockerfile_path::$(echo pwd/.ci.dockerfile)"
+          echo "::set-output name=dockerfile_path::$(echo $(pwd)/.ci.Dockerfile)"
 
       - name: Verify Semver Release
         if: ${{ steps.set-variables-image.outputs.tag_event == 'true' }}
