--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -227,8 +227,8 @@ jobs:
       - name: Remove .dockerignore If Present (to avoid buildx errors)
         shell: bash
         run: |
-          if [ -f "./.dockerignore" ] ; then
-            rm "./dockerignore"
+          if [ -f ".dockerignore" ] ; then
+            rm ".dockerignore"
           fi
 
       - name: Download Dependencies
