--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -139,12 +139,14 @@ jobs:
         run: go mod download
 
       - name: Download Binaries
+        env: 
+          OPERATOR_SDK_VERSION: ${{ inputs.OPERATOR_SDK_VERSION }}
         run: |
           # Create Binary Directory
           mkdir -p ${{ steps.set-variables.outputs.bin_dir }}
 
           # Operator SDK
-          curl -L -o ${{ steps.set-variables.outputs.bin_dir }}/operator-sdk https://github.com/operator-framework/operator-sdk/releases/download/${{ github.event.inputs.OPERATOR_SDK_VERSION }}/operator-sdk_linux_amd64
+          curl -L -o ${{ steps.set-variables.outputs.bin_dir }}/operator-sdk https://github.com/operator-framework/operator-sdk/releases/download/${{ env.OPERATOR_SDK_VERSION }}/operator-sdk_linux_amd64
 
           # Controller-gen
           make controller-gen
@@ -620,11 +622,13 @@ jobs:
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
+        env: 
+          PR_ACTOR: ${{ inputs.PR_ACTOR }}
         with:
           path: ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
           commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.BUNDLE_VERSION }}
-          committer: ${{ github.actor }} <${{ github.event.inputs.PR_ACTOR }}>
-          author: ${{ github.actor }} <${{ github.event.inputs.PR_ACTOR }}>
+          committer: ${{ github.actor }} <${{ env.PR_ACTOR }}>
+          author: ${{ github.actor }} <${{ env.PR_ACTOR}}>
           signoff: true
           branch: ${{ env.REPOSITORY_NAME }}-${{ env.BUNDLE_VERSION }}
           delete-branch: true
