--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -18,6 +18,9 @@ on:
         required: false
         type: string
     secrets:
+      COMMUNITY_OPERATOR_PAT:
+        description: 'Github PAT Token for Community Operator Fork Git Operations'
+        required: true
       REGISTRY_USERNAME:
         description: 'Username for Registry'
         required: true
@@ -30,6 +33,7 @@ on:
       BUNDLE_IMAGE_REPOSITORY:
         description: 'Registry image e.g. quay.io/redhat-cop/repository-name'
         required: false
+        
 
 env:
   DEFAULT_BUNDLE_VERSION: "0.0.1"
@@ -42,7 +46,8 @@ jobs:
     runs-on: ubuntu-latest
     name: setup      
     steps:
-      - name: Check if registry secrets are set
+      - name: 
+      registry secrets are set
         run: |
           if [ "${{ secrets.REGISTRY_USERNAME }}" == "" ] || [ "${{ secrets.REGISTRY_PASSWORD }}" == "" ]; then
             echo "Required Secrets 'REGISTRY_USERNAME' or 'REGISTRY_PASSWORD' are not set!"
@@ -50,7 +55,6 @@ jobs:
           fi
 
       - name: Check if community operators PAT secret is set
-        continue-on-error: true
         run: |
           if [ "${{ secrets.COMMUNITY_OPERATOR_PAT }}" == "" ]; then
             echo "Required Secret 'COMMUNITY_OPERATOR_PAT' is not set"
@@ -606,28 +610,126 @@ jobs:
           # Untar
           ls dist/${{ env.REPOSITORY_NAME }}-bundle*.tar.gz | xargs -n1 tar -C bundle/ --strip-components=1 -xzvf
 
-      - name: Create and Copy Bundle to Community Operators
+       - name: check whether it is first release
         shell: bash
         run: |
+          echo first_release=$([[ ! -d "./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}//operators/${{ env.REPOSITORY_NAME }} ]] && echo 'true' || echo 'false') >> $GITHUB_ENV
+          echo $first_release
+      
+      - name: create and copy bundle to community operators
+        shell: bash
+        run: | 
+          make bundle IMG=quay.io/${{ github.repository_owner }}/${{ env.REPOSITORY_NAME }}:v${VERSION} VERSION=${VERSION} DEFAULT_CHANNEL=alpha
+          sed  's/bundle\///g' bundle.Dockerfile > bundle/Dockerfile
           sed -i '/replaces: '"${{ env.REPOSITORY_NAME }}"'/d' ./bundle/manifests/${{ env.REPOSITORY_NAME }}.clusterserviceversion.yaml
-          mkdir -p ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}/${{ env.BUNDLE_VERSION }}
-          /bin/cp -v -R ./bundle/* ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}/${{ env.BUNDLE_VERSION }}
-          /bin/cp -v -R ./config/community-operators/*.yaml ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}
+          mkdir -p ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}//operators/${{ env.REPOSITORY_NAME }}/${VERSION}
+          /bin/cp -v -R ./bundle/* ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}/${VERSION}
+          /bin/cp -v -R ./config/community-operators/ci.yaml ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/$(basename ${{ env.REPOSITORY_NAME }}   
+      
+      - name: process bundle for disconnected support
+        uses: redhat-cop/github-actions/disconnected-csv@master
+        with:
+          CSV_FILE: "./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}/${{ env.VERSION }}/manifests/${{ env.REPOSITORY_NAME }}.clusterserviceversion.yaml"
+          TAGS_TO_DIGESTS: ${OPERATOR_IMAGE_TAG}
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
-        env: 
-          PR_ACTOR: ${{ inputs.PR_ACTOR }}
+        if: ${{ startsWith( env.first_release, 'true' ) }}
         with:
-          path: ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
-          commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.BUNDLE_VERSION }}
-          committer: ${{ github.actor }} <${{ env.PR_ACTOR }}>
-          author: ${{ github.actor }} <${{ env.PR_ACTOR}}>
+          path: ./tmp/community-operators-prod
+          commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.VERSION }}
+          committer: ${{ github.actor }} <${{ inputs.PR_ACTOR }}>
+          author: ${{ github.actor }} <${{ inputs.PR_ACTOR }}>
           signoff: true
-          branch: ${{ env.REPOSITORY_NAME }}-${{ env.BUNDLE_VERSION }}
+          branch: ${{ env.REPOSITORY_NAME }}-${{ env.VERSION }}
           delete-branch: true
           push-to-fork: ${{ github.repository_owner }}/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
-          title: ${{ env.REPOSITORY_NAME }} new version ${{ env.BUNDLE_VERSION }}
+          title: ${{ env.REPOSITORY_NAME }} initial commit
           body: |
-            ${{ steps.set-community-operators-parameters.outputs.pull-request-body }}
+            ### New Submissions
+            * [x] Has you operator [nested directory structure](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#create-a-bundle)?
+            * [x] Have you selected the Project *Community Operator Submissions* in your PR on the right-hand menu bar?
+            * [x] Are you familiar with our [contribution guidelines](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md)?
+            * [x] Have you [packaged and deployed](https://github.com/operator-framework/community-operators/blob/master/docs/testing-operators.md) your Operator for Operator Framework?
+            * [x] Have you tested your Operator with all Custom Resource Definitions?
+            * [x] Have you tested your Operator in all supported [installation modes](https://github.com/operator-framework/operator-lifecycle-manager/blob/master/doc/design/building-your-csv.md#operator-metadata)?
+            * [x] Is your submission [signed](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#sign-your-work)?
+            ### Updates to existing Operators
+            * [ ] Is your new CSV pointing to the previous version with the `replaces` property?
+            * [ ] Is your new CSV referenced in the [appropriate channel](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#bundle-format) defined in the `package.yaml` ?
+            * [ ] Have you tested an update to your Operator when deployed via OLM?
+            * [ ] Is your submission [signed](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#sign-your-work)?
+            ### Your submission should not
+            * [x] Modify more than one operator
+            * [x] Modify an Operator you don't own
+            * [x] Rename an operator - please remove and add with a different name instead
+            * [x] Submit operators to both `upstream-community-operators` and `community-operators` at once
+            * [x] Modify any files outside the above mentioned folders
+            * [x] Contain more than one commit. **Please squash your commits.**
+            ### Operator Description must contain (in order)
+            1. [x] Description about the managed Application and where to find more information
+            2. [x] Features and capabilities of your Operator and how to use it
+            3. [x] Any manual steps about potential pre-requisites for using your Operator
+            ### Operator Metadata should contain
+            * [x] Human readable name and 1-liner description about your Operator
+            * [x] Valid [category name](https://github.com/operator-framework/community-operators/blob/master/docs/required-fields.md#categories)<sup>1</sup>
+            * [x] One of the pre-defined [capability levels](https://github.com/operator-framework/operator-courier/blob/4d1a25d2c8d52f7de6297ec18d8afd6521236aa2/operatorcourier/validate.py#L556)<sup>2</sup>
+            * [x] Links to the maintainer, source code and documentation
+            * [x] Example templates for all Custom Resource Definitions intended to be used
+            * [x] A quadratic logo
+            Remember that you can preview your CSV [here](https://operatorhub.io/preview).
+            --
+            <sup>1</sup> If you feel your Operator does not fit any of the pre-defined categories, file a PR against this repo and explain your need
+            <sup>2</sup> For more information see [here](https://github.com/operator-framework/operator-sdk/blob/master/doc/images/operator-capability-level.svg)
           token: ${{ secrets.COMMUNITY_OPERATOR_PAT }}
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        if: ${{ ! startsWith( env.first_release, 'true' ) }} 
+        with:
+          path: ./tmp/community-operators-prod
+          commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.VERSION }}
+          committer: ${{ github.actor }} <${{ inputs.PR_ACTOR }}>
+          author: ${{ github.actor }} <${{ inputs.PR_ACTOR }}>
+          signoff: true
+          branch: ${{ env.REPOSITORY_NAME }}-${{ env.VERSION }}
+          delete-branch: true
+          push-to-fork: ${{ github.repository_owner }}/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
+          title: ${{ env.REPOSITORY_NAME }} new version ${{ env.VERSION }}
+          body: |
+            ### New Submissions
+            * [ ] Has you operator [nested directory structure](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#create-a-bundle)?
+            * [ ] Have you selected the Project *Community Operator Submissions* in your PR on the right-hand menu bar?
+            * [ ] Are you familiar with our [contribution guidelines](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md)?
+            * [ ] Have you [packaged and deployed](https://github.com/operator-framework/community-operators/blob/master/docs/testing-operators.md) your Operator for Operator Framework?
+            * [ ] Have you tested your Operator with all Custom Resource Definitions?
+            * [ ] Have you tested your Operator in all supported [installation modes](https://github.com/operator-framework/operator-lifecycle-manager/blob/master/doc/design/building-your-csv.md#operator-metadata)?
+            * [ ] Is your submission [signed](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#sign-your-work)?
+            ### Updates to existing Operators
+            * [x] Is your new CSV pointing to the previous version with the `replaces` property?
+            * [x] Is your new CSV referenced in the [appropriate channel](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#bundle-format) defined in the `package.yaml` ?
+            * [ ] Have you tested an update to your Operator when deployed via OLM?
+            * [x] Is your submission [signed](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#sign-your-work)?
+            ### Your submission should not
+            * [x] Modify more than one operator
+            * [x] Modify an Operator you don't own
+            * [x] Rename an operator - please remove and add with a different name instead
+            * [x] Submit operators to both `upstream-community-operators` and `community-operators` at once
+            * [x] Modify any files outside the above mentioned folders
+            * [x] Contain more than one commit. **Please squash your commits.**
+            ### Operator Description must contain (in order)
+            1. [x] Description about the managed Application and where to find more information
+            2. [x] Features and capabilities of your Operator and how to use it
+            3. [x] Any manual steps about potential pre-requisites for using your Operator
+            ### Operator Metadata should contain
+            * [x] Human readable name and 1-liner description about your Operator
+            * [x] Valid [category name](https://github.com/operator-framework/community-operators/blob/master/docs/required-fields.md#categories)<sup>1</sup>
+            * [x] One of the pre-defined [capability levels](https://github.com/operator-framework/operator-courier/blob/4d1a25d2c8d52f7de6297ec18d8afd6521236aa2/operatorcourier/validate.py#L556)<sup>2</sup>
+            * [x] Links to the maintainer, source code and documentation
+            * [x] Example templates for all Custom Resource Definitions intended to be used
+            * [x] A quadratic logo
+            Remember that you can preview your CSV [here](https://operatorhub.io/preview).
+            --
+            <sup>1</sup> If you feel your Operator does not fit any of the pre-defined categories, file a PR against this repo and explain your need
+            <sup>2</sup> For more information see [here](https://github.com/operator-framework/operator-sdk/blob/master/doc/images/operator-capability-level.svg)
+          token:  ${{ secrets.COMMUNITY_OPERATOR_PAT }}
