--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -13,7 +13,7 @@ on:
         required: false
         type: string
       PR_ACTOR:
-        description: 'Email for Git Commit PR to Release Operator'
+       description: 'Email for Git Commit PR to Release Operator'
         required: false
         type: string
     secrets:
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     name: setup      
     steps:
-      - name: CHeck if registry secrets are set
+      - name: Check if registry secrets are set
         run: |
           if [ "${{ secrets.REGISTRY_USERNAME }}" == "" ] || [ "${{ secrets.REGISTRY_PASSWORD }}" == "" ]; then
             echo "Required Secrets 'REGISTRY_USERNAME' or 'REGISTRY_PASSWORD' are not set!"
@@ -267,7 +267,12 @@ jobs:
           file: "./ci.Dockerfile"
           platforms: ${{ matrix.platform }}
           push: true
-          tags: "${{ env.OPERATOR_IMAGE_REPOSITORY }}:latest,${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}"
+          tags: "${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ matrix.platform }}-${{ env.OPERATOR_VERSION }}"
+
+      - name: "Append to Image Manifest"
+        shell: bash
+        run: |
+          docker buildx imagetools create --append -t "${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}" ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ matrix.platform }}-${{ env.OPERATOR_VERSION }}
 
       - name: Prepare Distribution Artifacts
         shell: bash
@@ -287,7 +292,7 @@ jobs:
   build-bundle:
     runs-on: ubuntu-latest
     name: build-bundle
-    needs: ["setup", "build-operator"]
+    needs: ["setup", "build-operator", "package-image-manifests"]
     env:
       REPOSITORY_NAME: ${{ needs.setup.outputs.repository_name }}
       OPERATOR_VERSION: ${{ needs.setup.outputs.operator_version }}
@@ -370,8 +375,8 @@ jobs:
           file: ./bundle.Dockerfile
           platforms: ${{ matrix.platform }}
           push: true
-          tags: "${{ env.BUNDLE_IMAGE_REPOSITORY }}:latest,${{ env.BUNDLE_IMAGE_REPOSITORY }}:${{ env.BUNDLE_VERSION }}"
-
+          tags: "${{ env.BUNDLE_IMAGE_REPOSITORY }}:${{ matrix.platform }}-${{ env.BUNDLE_VERSION }}"
+          
       - name: Prepare Distribution Artifacts
         shell: bash
         run: |
@@ -390,6 +395,36 @@ jobs:
           name: dist
           path: dist
 
+  package-image-manifests: 
+    runs-on: ubuntu-latest
+    name: package-helm
+    needs: ["setup", "build-operator"]
+    env:
+      REPOSITORY_NAME: ${{ needs.setup.outputs.repository_name }}
+      OPERATOR_VERSION: ${{ needs.setup.outputs.operator_version }}
+      BUNDLE_VERSION: ${{ needs.setup.outputs.bundle_version }}
+      OPERATOR_IMAGE_REPOSITORY: "${{ needs.setup.outputs.operator_image_registry }}/${{ needs.setup.outputs.operator_image_repository_name }}"
+      OPERATOR_IMAGE_REGISTRY: ${{ needs.setup.outputs.operator_image_registry }}
+      BUNDLE_IMAGE_REPOSITORY: "${{ needs.setup.outputs.bundle_image_registry }}/${{ needs.setup.outputs.bundle_image_repository_name }}"
+      BUNDLE_IMAGE_REGISTRY: ${{ needs.setup.outputs.bundle_image_registry }}
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Bundle Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.BUNDLE_IMAGE_REGISTRY }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: "Push Bundle Image Manifest"
+        shell: bash
+        run: |
+        docker buildx imagetools create -t "${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}" ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}
+
+          
+          
   package-helm:
     runs-on: ubuntu-latest
     name: package-helm
