--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -285,13 +285,41 @@ jobs:
           path: dist
   
       
-      
-      
-      
+  build-image:
+    runs-on: ubuntu-latest 
+    name: build-image
+    needs: ["setup", "build-operator"]
+    env:
+      REPOSITORY_NAME: ${{ needs.setup.outputs.repository_name }}
+      OPERATOR_VERSION: ${{ needs.setup.outputs.operator_version }}
+      BUNDLE_VERSION: ${{ needs.setup.outputs.bundle_version }}
+      OPERATOR_IMAGE_REPOSITORY: "${{ needs.setup.outputs.operator_image_registry }}/${{ needs.setup.outputs.operator_image_repository_name }}"
+      OPERATOR_IMAGE_REGISTRY: ${{ needs.setup.outputs.operator_image_registry }}
+      BUNDLE_IMAGE_REPOSITORY: "${{ needs.setup.outputs.bundle_image_registry }}/${{ needs.setup.outputs.bundle_image_repository_name }}"
+      BUNDLE_IMAGE_REGISTRY: ${{ needs.setup.outputs.bundle_image_registry }}
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          buildkitd-flags: --debug
+      - name: Login to Operator Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.OPERATOR_IMAGE_REGISTRY }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: "Append to Image Manifest"
+        shell: bash
+        run: |
+          docker buildx imagetools create -t "${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}" ${{ env.OPERATOR_IMAGE_REPOSITORY }}:linux-ppc64le-${{ env.OPERATOR_VERSION }} ${{ env.OPERATOR_IMAGE_REPOSITORY }}:linux-arm64-${{ env.OPERATOR_VERSION }}${{ env.OPERATOR_IMAGE_REPOSITORY }}:linux-amd64-${{ env.OPERATOR_VERSION }}
+
   build-bundle:
     runs-on: ubuntu-latest
     name: build-bundle
-    needs: ["setup", "build-operator"]
+    needs: ["setup", "build-operator", "build-image"]
     env:
       REPOSITORY_NAME: ${{ needs.setup.outputs.repository_name }}
       OPERATOR_VERSION: ${{ needs.setup.outputs.operator_version }}
