--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -298,23 +298,28 @@ jobs:
       BUNDLE_IMAGE_REPOSITORY: "${{ needs.setup.outputs.bundle_image_registry }}/${{ needs.setup.outputs.bundle_image_repository_name }}"
       BUNDLE_IMAGE_REGISTRY: ${{ needs.setup.outputs.bundle_image_registry }}
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Setting Workflow Variables
+        id: set-variables
+        env: 
+          BUILD_PLATFORMS: ${{ inputs.BUILD_PLATFORMS }}
+        run: |
+          echo "::set-output name=BUILD_PLATFORM_TAGS::$(echo $BUILD_PLATFORMS | sed  -e 's/,/ /g' -e 's/\//-/g')"
+          
+      - name: Log in to Registry
+        uses: redhat-actions/podman-login@v1
         with:
-          buildkitd-flags: --debug
-      - name: Login to Operator Registry
-        uses: docker/login-action@v1
-        with:
+          username: ${{ env.REGISTRY_USERNAME }}
+          password: ${{ env.REGISTRY_PASSWORD }}
           registry: ${{ env.OPERATOR_IMAGE_REGISTRY }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+      
       - name: "Append to Image Manifest"
         shell: bash
         run: |
-          docker buildx imagetools create -t "${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}" ${{ env.OPERATOR_IMAGE_REPOSITORY }}:linux-ppc64le-${{ env.OPERATOR_VERSION }} ${{ env.OPERATOR_IMAGE_REPOSITORY }}:linux-arm64-${{ env.OPERATOR_VERSION }} ${{ env.OPERATOR_IMAGE_REPOSITORY }}:linux-amd64-${{ env.OPERATOR_VERSION }}
+          podman manifest create ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}
+          for IMGTAG in  ${{needs.set-variables.outputs.BUILD_PLATFORM_TAGS}}; do \
+              podman manifest add ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }} docker://$OPERATOR_IMAGE_REPOSITORY:IMGTAG; \
+          done
+          podman manifest push --all $REPO:latest
 
   build-bundle:
     runs-on: ubuntu-latest
