--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -316,8 +316,8 @@ jobs:
         shell: bash
         run: |
           podman manifest create ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}
-          for IMGTAG in  ${{needs.set-variables.outputs.BUILD_PLATFORM_TAGS}}; do \
-              podman manifest add ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }} docker://$OPERATOR_IMAGE_REPOSITORY:IMGTAG; \
+          for IMGTAG in  ${{ needs.set-variables.outputs.BUILD_PLATFORM_TAGS }}; do \
+              podman manifest add ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }} docker://${{ env.OPERATOR_IMAGE_REPOSITORY }}:IMGTAG; \
           done
           podman manifest push --all ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}
 
