--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -69,6 +69,8 @@ jobs:
 
           # Create Distribution Matrix
           echo "::set-output name=dist_matrix::$(echo -n "${{ env.BUILD_PLATFORMS }}" | jq -csR '. | split(",")')"
+          # Create Image Tags
+          echo "::set-output name=image_platform_tags::$(echo $BUILD_PLATFORMS | sed  -e 's/,/ /g' -e 's/\//-/g')"
 
       - name: Setting Image Variables
         id: set-variables-image
@@ -174,6 +176,7 @@ jobs:
       bundle_version: ${{ steps.set-variables-image.outputs.bundle_version }}
       tag_event: ${{ steps.set-variables-image.outputs.tag_event }}
       dist_matrix: ${{ steps.set-variables.outputs.dist_matrix }}
+      image_platform_tags: ${{ steps.set-variables.outputs.image_platform_tags }}
 
   build-operator:
     runs-on: ubuntu-latest
@@ -298,13 +301,6 @@ jobs:
       BUNDLE_IMAGE_REPOSITORY: "${{ needs.setup.outputs.bundle_image_registry }}/${{ needs.setup.outputs.bundle_image_repository_name }}"
       BUNDLE_IMAGE_REGISTRY: ${{ needs.setup.outputs.bundle_image_registry }}
     steps:
-      - name: Setting Workflow Variables
-        id: set-variables
-        env: 
-          BUILD_PLATFORMS: ${{ inputs.BUILD_PLATFORMS }}
-        run: |
-          echo "::set-output name=BUILD_PLATFORM_TAGS::$(echo $BUILD_PLATFORMS | sed  -e 's/,/ /g' -e 's/\//-/g')"
-          
       - name: Log in to Registry
         uses: redhat-actions/podman-login@v1
         with:
@@ -316,7 +312,7 @@ jobs:
         shell: bash
         run: |
           podman manifest create ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}
-          for IMGTAG in  ${{ needs.set-variables.outputs.BUILD_PLATFORM_TAGS }}; do \
+          for IMGTAG in  ${{ needs.setup.outputs.image_platform_tags }}; do \
               podman manifest add ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }} docker://${{ env.OPERATOR_IMAGE_REPOSITORY }}:IMGTAG; \
           done
           podman manifest push --all ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}
