--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -20,6 +20,9 @@ on:
       COMMUNITY_OPERATOR_PAT:
         description: 'Github PAT Token for Community Operator Fork Git Operations'
         required: true
+      GITHUB_TOKEN:
+        description: 'Github PAT Token for Github Release Operations'
+        required: true      
       REGISTRY_USERNAME:
         description: 'Username for Registry'
         required: true
