--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -530,12 +530,12 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Upload release binaries
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.PAT_TOKEN }}
           file: dist/*
           tag: ${{ github.ref }}
           overwrite: true
