--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -567,35 +567,15 @@ jobs:
       - name: Create Checksums for Release Artifacts
         run: for i in `ls dist/`; do sha256sum dist/$i | awk '{ print $1 }' > dist/$i.sum256; done
 
-      - name: Generate Changelog
-        run: |
-          LATEST_TAG=$(git tag --sort=creatordate | sed '$!d')
-          PREVIOUS_TAG=$(git tag --sort=creatordate | sed 'x;$!d')
-          if [ -z "${PREVIOUS_TAG}" ]; then
-            REV_RANGE=${LATEST_TAG}
-          else
-            REV_RANGE=${PREVIOUS_TAG}..${LATEST_TAG}
-          fi
-          git log --pretty=format:"- %s %H (%aN)" --no-merges ${REV_RANGE} > ${{ env.OPERATOR_VERSION }}-CHANGELOG.txt
-          cat ${{ env.OPERATOR_VERSION }}-CHANGELOG.txt
-
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          body_path: ${{ env.OPERATOR_VERSION }}-CHANGELOG.txt
+          generate_release_notes: true
           draft: false
           prerelease: false
+          files: dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload release binaries
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist/*
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
 
   helm-release:
     runs-on: ubuntu-latest
